# python_duckdb_etl

./: README.md  app.py  duckdb.db  exemplo.env  pipeline.py  pipeline_00.py  pipeline_01.py  pyproject.toml  requirements.txt
