[tool.poetry]
name = "python-duckdb-etl"
version = "0.1.0"
description = ""
authors = ["guimarczewski <guimarczewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
taskipy = "^1.12.2"
gdown = "^5.1.0"
duckdb = "^0.10.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = """
streamlit run app.py
"""